Lasagna Changelog


What is Lasagna?
Lasagna is a Python-based image viewer for 3-D anatomy datasets. It was inspired by the "slicing viewer",
VV (https://www.creatis.insa-lyon.fr/rio/vv). Lasagna was originally written in 2015/2016 at the Mrsic-Flogel
laboratory, Basel, by Rob Campbell.


2019/06/27
- Rob Campbell
Improve display of ingredients in list. 
Elastix plugin no longer crashes if the user presses "cancel" instead of loading a stack. 
Elastix and Transformix plugins allow loading of TIFF stacks.



2019/06/27
- Rob Campbell
Add nice interpolation on add_line lines and create a save method for the line itself. 

2019/06/26
- Rob Campbell
Fix silly bug that was causing the flip along the Y axis (dorso-ventral for our samples) in the first image axis
(the coronal axis in our data)

Greatly speed up initial display of larger images by fixing slow histogram calculation.

Bug fix axis ratio boxes that were causing a crash. 


2019/06/25
- Antonin Blot
Improve the embeded ipython console. Giving the -C argument will start an ipython session in the terminal with `app`
and `tasty` in the namespace.


2019/06/24
- Rob Campbell
IO plugins now all start without needing to be listed in the Lasagna preferences file. 


2019/06/23
- Rob Campbell
tree class replaced with refactored version (see note froom 2019/06/12) and confirm ARA Explorer works.


2019/06/22
- Rob Campbell
General work on add_line_plugin. It now handles point insertion, 3D line fit works better, bug fixes. 
Rename "Base stack" to "Image stack"


2019/06/18
- Rob Campbell
8f9bc0134c64a4d3a2e3d199f15c23a5c28c46f8
Move code that generates ingredient QStandardItem for list out for the points, lines, and imagestack 
ingredients and into lasagna_ingredient. Remove orphan version of lasanga_ingredient in root dir.

0c43bac4171f48099d58c27f609a7b07e7f55cf6
Replace some instances of lasanga.initialiseAxes() with the the new lasagna.update_2D_plot_ingredients_in_axes