@@ -6,6 +6,12 @@ Lasagna is a Python-based image viewer for 3-D anatomy datasets. It was inspired
 VV (https://www.creatis.insa-lyon.fr/rio/vv). Lasagna was originally written in 2015/2016 at the Mrsic-Flogel
 laboratory, Basel, by Rob Campbell.
 
+2020/03/04
+- Rob Campbell
+Bugfix: Lasagna now honors "defaultAxisRatios" setting in .yml file
+defaultAxisRatios are now [1,1,1]
+demo images hosted on mouse.vision replaced
+
 
 2019/06/27
 - Rob Campbell
